dnl ##
dnl ##  configure.in -- GNU autoconf source for WML::GD
dnl ##  Copyright (c) 2000 Denis Barbier, All Rights Reserved. 
dnl ##

AC_PREREQ(2.0)dnl
AC_REVISION($Revision: 1.3 $)

AC_INIT(GD.pm)

tmpdir=${TMPDIR-/tmp}
AC_SUBST(tmpdir)

define(AC_CONFIGURE_PART,[dnl
AC_MSG_RESULT()
AC_MSG_RESULT($1)
])dnl

dnl ##  compile tools
AC_CONFIGURE_PART(CHECK: Build Utilities)
AC_ARG_WITH(cc,dnl
[  --with-cc=PATH          use a specific ANSI C compiler],[
CC=$with_cc
],[dnl
:
])dnl
AC_ARG_WITH(forced-cc,dnl
[  --with-forced-cc=PATH   force the global usage of a specific ANSI C compiler],[
CC=$with_forced_cc
export CC
],[dnl
:
])dnl
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl ##  PNG support
AC_CONFIGURE_PART(CHECK: PNG Support)
AC_CHECK_LIB(png, png_write_image)
AC_CHECK_HEADER(png.h)
LIBPNG=
if test ".$ac_cv_lib_png_png_write_image" = .yes; then
    if test ".$ac_cv_header_png_h" = .yes; then
        LIBPNG=-lpng
    fi
fi
AC_SUBST(LIBPNG)

AC_OUTPUT(
   Makefile.PL
   libgd/Makefile.PL
)

dnl ##EOF##
